Squashed commit of the following:
commit 9fa0b20d7a5835d58e1f503d9c411ac4c1152cf1
Author: Gandhi <@aquele-dinho>
Date:   Tue May 27 16:35:41 2025 -0300

    Style issues resolved, but we'll need to review the authentication with KC.

commit a7b675020aff1eec1ef1a2a2fa2152125bd081fa
Author: Gandhi <@aquele-dinho>
Date:   Mon May 26 23:54:44 2025 -0300

    style looks goot.
    need to correct the tests.